monitoria/mac323/4-2-33/grades/Gabriel-Kuribara-Lasso_190850_assignsubmission_file_WordDAG.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
CorretorDoVictaum.java:85: error: cannot find symbol
            args.ex.PrintDag();
                   ^
  symbol:   method PrintDag()
  location: variable ex of type WordDAG
1 error
Second Compile Method
CorretorDoVictaum.java:85: error: cannot find symbol
            args.ex.PrintDag();
                   ^
  symbol:   method PrintDag()
  location: variable ex of type WordDAG
1 error
